Refactor to match core & add unit tests