@@ -3,39 +3,23 @@ package org.syphr.wordplay.lang.english;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
+import java.util.stream.Collectors;
+
+import javax.annotation.concurrent.Immutable;
 
 import org.syphr.wordplay.core.lang.Dictionary;
 
+@Immutable
 public class EnableDictionary implements Dictionary
 {
     private static final String DICTIONARY_RESOURCE = "enable-dictionary.txt";
 
     private static final Set<String> WORDS;
-    static
-    {
-        WORDS = new HashSet<String>();
-
-        try
-        {
-            BufferedReader reader = new BufferedReader(new InputStreamReader(EnableDictionary.class.getResourceAsStream(DICTIONARY_RESOURCE)));
-            try
-            {
-                String line;
-                while ((line = reader.readLine()) != null)
-                {
-                    WORDS.add(line);
-                }
-            }
-            finally
-            {
-                reader.close();
-            }
-        }
-        catch (IOException e)
-        {
+    static {
+        try (var reader = new BufferedReader(new InputStreamReader(EnableDictionary.class.getResourceAsStream(DICTIONARY_RESOURCE)))) {
+            WORDS = reader.lines().collect(Collectors.toSet());
+        } catch (IOException e) {
             throw new IllegalStateException("ENABLE dictionary resource is missing!");
         }
     }
@@ -43,8 +27,7 @@ public class EnableDictionary implements Dictionary
     @Override
     public boolean isValid(String word)
     {
-        if (word == null || word.length() < 2)
-        {
+        if (word == null || word.length() < 2) {
             return false;
         }
 
@@ -54,7 +37,7 @@ public class EnableDictionary implements Dictionary
     @Override
     public Set<String> getWords()
     {
-        return Collections.unmodifiableSet(WORDS);
+        return Set.copyOf(WORDS);
     }
 
     @Override
